2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mapcolor.c: try to do something reasonable for
	the empty source range (bug #436145).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: start with a reasonable size and
	paned position and remember the window size and paned position at
	least within a GIMP session.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: define datarootdir before datadir (bug #436386).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in: require libexif >= 0.6.0.

	* plug-ins/jpeg/gimpexif.[ch]: removed gimp_exif_entry_get_value()
	which was needed to work with libexif < 0.6.0.

	* plug-ins/jpeg/jpeg.c: declare the global ExifData here instead
	of in gimpexif.c.

	* plug-ins/jpeg/jpeg-exif.c: cosmetics.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_apply_exif_data_to_image): only
	check for EXIF_TAG_GPS_VERSION_ID if it's defined (see bug #377917).
	This tag was added in libexif 0.6.13.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in (AM_INIT_AUTOMAKE): pass dist-bzip2 to automake.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/Makefile.am (DISTCLEANFILES): clean gimpversion.h.

	* plug-ins/metadata/Makefile.am (CLEANFILES): clean testbase64.

	* po/Makefile.in.in (mostlyclean): clean .intltool-merge-cachemake

	* tools/pdbgen/Makefile.am: use DISTCLEANFILES instead of
	MAINTAINERCLEANFILES.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* tools/defcheck.py: improved path handling. Allow to pass the
	source directory on the command-line.

	* Makefile.am (check-defs): pass $(top_srcdir) to defcheck.py.
	(validate-authors): validate authors.xml in the srcdir.

	* menus/Makefile.am (validate): changed output for consistency.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): --enable-gtk-doc
	(EXTRA_DIST): added mkinstalldirs, the po-* Makefiles need it.