@@ -1,5 +1,13 @@
 2007-05-06  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/pygimp/gimpfu.py: don't add the radiobuttons into a
+	GtkFrame.
+
+	* plug-ins/pygimp/plug-ins/sphere.py: added a PF_RADIO parameter
+	as an example and for testing purposes.
+
+2007-05-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/mapcolor.c: try to do something reasonable for
 	the empty source range (bug #436145).
 
